(FEACTURE-001) Configuracion Inicial